CityForecastServ/deploy/k8s/forecast-app.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: forecast-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: forecast-app
  template:
    metadata:
      labels:
        app: forecast-app
    spec:
      hostname: forecast-app
      containers:
      - name: forecast-app
        image: jardelkuhnen/forecast-app:latest
        resources:
          requests:
              cpu: 100m
              memory: 100Mi
          limits:
              memory: 2048Mi
              cpu: 500m
        ports:
        - containerPort: 8080
          name: http
---

apiVersion: v1
kind: Service
metadata:
  name: forecast-app
spec:
  type: ClusterIP
  selector:
    app: forecast-app
  ports:
  - name: http
    port: 8080
    targetPort: 8080
